# Licord

./: .env.example  .gitignore  LICENSE  PKGBUILD  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  test_webkit.rs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
packaging/aur/: README.md
scripts/: package-linux.sh  package-windows.ps1
src/: App.tsx  index.css  main.tsx  test_webrtc.js  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media.rs  native_voice.rs  native_voice_stub.rs
src/components/: DebugWebRTC.tsx
src/context/: AuthContext.tsx
src/hooks/: useChannels.ts  useCoWatch.ts  useFriends.ts  useGlobalVoicePresence.ts  useGroupChats.ts  useMessageNotifications.ts  useMessages.ts  useServers.ts  useVoiceRoom.ts  useYouTubePlayer.ts
src/lib/: env.ts  livekit.ts  mock.ts  nativeVoice.ts  officialService.ts  storage.ts  supabase.ts  utils.ts  youtube.ts
src/pages/: AuthPage.tsx  ChatPage.tsx  DirectCallPage.tsx  FriendsPage.tsx  GroupChatPage.tsx  SettingsPage.tsx  VoiceRoomPage.tsx
src/store/: useAppStore.ts
src/types/: database.ts
stitch_oxide_discord_client/arkada_lar_ve_ki_iler/: code.html
stitch_oxide_discord_client/better_vc_ana_layout/: code.html
stitch_oxide_discord_client/carbon_rust/: DESIGN.md
stitch_oxide_discord_client/giri_ve_kay_t_ekran/: code.html
stitch_oxide_discord_client/medya_ve_dosya_payla_m/: code.html
supabase/: schema.sql
(+28 files in other folders)
