[package]
name = "licord"
version = "0.1.0"
description = "Licord — native Discord alternative for Arch Linux / CachyOS"
authors = ["Better-VC"]
edition = "2021"
rust-version = "1.77.2"

# The frontend talks to this crate; `main.rs` is a thin entrypoint over `lib.rs`
# so the same logic can be reused on mobile targets later.
[lib]
name = "better_vc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
livekit = { version = "0.7.47", features = ["rustls-tls-native-roots"] }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }

[features]
# Enabled by `tauri build` to strip dev-only conveniences.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Lean, fast native binary for AUR/AppImage distribution (Phase 6).
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
